--- a/starter_code/pom.xml
+++ b/starter_code/pom.xml
@@ -149,6 +149,12 @@
 			<version>2.7.9</version>
 		</dependency>-->
 
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
